# Langgraph-API-warpper

./: .flake8  .gitignore  ADVANCED_FEATURES_ADDED.md  CLEANUP_PLAN.md  DEEPAGENT_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LANGGRAPH_STREAMING_RESEARCH.md  README.md  UNIFIED_STREAMING_PLAN.md  generate_docstrings.py  langgraph.json  main.tldr  pyproject.toml  ruff.toml  test_simple_tool.py  test_unified_streaming.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
frontend/: README.md  TYPESCRIPT_MIGRATION.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  App.tsx  index.css  main.jsx  types.ts
frontend/src/components/: ChatInterface.jsx  ChatInterface.tsx  Message.jsx  Message.tsx  MessageList.jsx  MessageList.tsx  Sidebar.jsx  Sidebar.tsx  StreamingText.tsx
frontend/src/hooks/: useWebSocket.js  useWebSocket.ts
src/: main.py
src/api/: di.py
src/api/controllers/: chat_controller.py  websocket_chat_controller.py
src/api/dtos/: chat.py
src/api/routes/: chat.py  chat_websocket.py  unified_websocket.py  websocket.py
src/api/schemas/: chat.py  workflow.py
src/api/utils/: convert_message.py  websocket_handlers.py  websocket_stats.py  websocket_utils.py
src/app/: llm_provider.py
src/app/application/: __init__.py
src/app/domain/: __init__.py
src/app/infrastructure/: __init__.py
src/app/services/: __init__.py  chat_service.py
src/app/workflow/: __init__.py  constants.py  deep_agent.py  (+11 more)
src/domain/: chat_content.py  entities.py  models.py
src/workflow/: chat_graph.py  chat_runner.py  graph.py  runner.py  tools.py
tests/: README.md  test_endpoints.py
(+70 files in other folders)
