[project]
name = "nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.0",
    "langchain-google-genai>=2.1.12",
    "langchain>=0.3.27",
    "langgraph>=0.6.8",
    "langgraph-checkpoint-postgres>=2.0.24",
    "psycopg-pool>=3.2.6",
    "psycopg[binary]>=3.2.10",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.37.0",
    "asyncpg>=0.30.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "httpx>=0.28.1",
    "ruff>=0.13.3",
]

[tool.black]
line-length = 200
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 200

[tool.flake8]
max-line-length = 200
extend-ignore = ["E203", "W503"]

[tool.pylint.format]
max-line-length = 200

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]
