[project]
name = "nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.127.0",
    "langchain-google-genai>=4.1.2",
    "langchain>=1.2.0",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-postgres>=3.0.2",
    "langgraph-cli[inmem]>=0.4.11",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.40.0",
    "asyncpg>=0.31.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "ruff>=0.14.10",
    "injector>=0.23.0",
    "deepagents>=0.3.1",
    "langchain-google-vertexai>=3.2.0",
    "langchain-openai>=1.1.6",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
